--- a/csf_assessment_template/server/src/main/resources/application.properties
+++ b/csf_assessment_template/server/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.application.name=server
 server.port = 3000
 
+# MySQL
+spring.datasource.url = jdbc:mysql://localhost:3306/projectb
+spring.datasource.username = root
+spring.datasource.password = Bobododo123!
+
+# MongoDB configuration
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=restaurant
+
+
+payee = Lim Yu Aun
